<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_validacion_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:background="@color/color_Blanco"
    tools:context="com.fsw_android.asistenciadocente.ValidacionLogin">

    <!--Contenido del layout-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1">

            <ImageView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/logo_fime_validacion_login"
                android:src="@drawable/logo_fime" />

            <TextView
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Proposito"
                android:textAlignment="center"
                android:textSize="@dimen/textSize24"
                android:textColor="@color/color_Negro"
                android:id="@+id/txtViewValidando_ValidacionLogin" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight=".5"
                android:background="@drawable/logo_fime"
                android:visibility="invisible"/>

            <TextView
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Direccion"
                android:textAlignment="center"
                android:textSize="@dimen/textSize24"
                android:textColor="@color/color_Negro"
                android:id="@+id/txtViews" />
            <TextView
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Municipio"
                android:textAlignment="center"
                android:textSize="@dimen/textSize24"
                android:textColor="@color/color_Negro"
                android:id="@+id/txtMunicipio" />
            <TextView
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Telefono"
                android:textAlignment="center"
                android:textSize="@dimen/textSize24"
                android:textColor="@color/color_Negro"
                android:id="@+id/txttelefono" />
        </LinearLayout>

</ScrollView>
    </LinearLayout>
    <!--Final del contenido del layout-->
</LinearLayout>
