<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:background="@color/color_Blanco"
    tools:context="com.fsw_android.asistenciadocente.Login">

    <!--Contenido del layout-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1">

            <ImageView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/logo_fime_splashscreen"
                android:src="@drawable/logo_fime" />

            <TextView
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txtViewUsuario_Login"
                android:textAlignment="center"
                android:textSize="@dimen/textSize24"
                android:textColor="@color/color_Negro"
                android:id="@+id/txtViewUsuario_Login" />
            <TextView
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txtViewUsuario_Login"
                android:visibility="invisible"
                android:textAlignment="center"
                android:textSize="@dimen/textSize24"
                android:textColor="@color/color_Negro" />

            <TextView
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txtViewContraseña_Login"
                android:textAlignment="center"
                android:textSize="@dimen/textSize24"
                android:textColor="@color/color_Negro"
                android:id="@+id/txtViewContraseña_Login" />

            <TextView
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txtViewContraseña_Login"
                android:visibility="invisible"
                android:textAlignment="center"
                android:textSize="@dimen/textSize24"
                android:textColor="@color/color_Negro"/>
            <Button
                android:text="@string/btnIniciarSesion_Login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btnIniciarSesion_Login"
                android:textSize="@dimen/textSize24"
                android:layout_gravity="center" />
        </LinearLayout>


    </LinearLayout>
    <!--Final del contenido del layout-->
</LinearLayout>
